Fix layout problems

--- a/frontend/scripts/css/styles.css
+++ b/frontend/scripts/css/styles.css
@@ -258,23 +258,24 @@ label {
   background-image: linear-gradient();
   background-repeat: no-repeat;
   background-size: cover;
-  background-size: 400px;
+  background-size: 900px;
   background-position: right;
   width: 100%;
-  display: grid;
-  place-items: center;
+  /* padding-left: 5em; */
+  /* display: grid; */
+  /* place-items: left; */
   padding: 2em 0;
 }
 
 .About-container {
-  padding: 20px;
+  padding-left: 5em;
   width: 500px;
-
 }
 
 .Information {
   display: flex;
   flex-direction: column;
+  padding-left: 2em;
 }
 
 .Information h1 {
@@ -292,6 +293,11 @@ label {
   letter-spacing: 1px;
   font-size: 14px;
   list-style-type: square;
+}
+
+.homepage-container .button {
+  align-self: center;
+  width: max-content;
 }
 
 .homepage-container p {
